--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "your-project-name-here",
+  "name": "nasa-weather-and-image-apis",
   "version": "1.0.0",
-  "description": "Template for Epicodus Projects",
+  "description": "NASA Weather & Images",
   "main": "main.js",
   "scripts": {
     "build": "webpack --mode development",
